# coda-teammate

./: .env.example  .gitignore  .sesskey  CLAUDE.md  README.md  advice-for-plan.md  docker-compose.yml  pyproject.toml  read_task.md  review-for-plan.md
.claude/: CLAUDE.md
apps/liaison_brain/: Dockerfile  pyproject.toml
apps/liaison_brain/app/: __init__.py  callbacks.py  graph.py  main.py  memory.py  shield.py  state.py
apps/workspace_ui/: .sesskey  Dockerfile  app.py  pyproject.toml
tests/: __init__.py  conftest.py  e2e_integration.py  simulate_crash.py  test_api_performance.py  test_economy.py  test_integration_ui_backend.py  test_load_performance.py  test_memory.py  test_model_switching.py  test_privacy.py  test_sse_fix.py  test_sse_user_cases.py  test_ui_automation.py  test_ui_performance.py  test_ui_playwright.py  ui_test_helpers.py
