[project]
name = "coda-teammate-suite"
version = "0.1.0"
description = "AI teammate orchestration suite"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "apps/liaison_brain",
    "apps/workspace_ui",
    "packages/skillhive",
    "packages/sentry_foundation",
]

[tool.ruff]
target-version = "py312"
line-length = 120
